# gnn-entailment-caption

./: # Plot unsupervised target distributions.ipynb  .gitignore  .gitmodules  Cargo.toml  README.md  Test Unsupervised Embedding.ipynb  Unsupervised graph classification-representation learning via distances.ipynb  Visualize Graph Construction.ipynb  common.py  compute_emb_graph.py  config.py  create_dataset_partition.py  dataset.py  embed_problems_unsupervised.py  eval  eval.py  evaluate.py  extract_features.py  extract_features_old.py  generate_synthetic_dataset.py  graph_target.pkl  model.py  model_old.py  models.py  predict_axioms.py  read_problem.py  requirements.txt  run_all_nodes.py  search_hyperparams.py  statistics.py  stats_writer.py  supervised_axiom_embedding_plot.py  synthesise_results.py  train  train.py  train_simple.py  transfer_learning.py  utils.py
deepmath/: Cargo.toml  common.py  create_dataset_partition.py  dataset.py  eval.py  extract_features.py  model.py  train.py
deepmath/src/: lib.rs
id_files/: dev_100.txt  example.txt  jjt_fof.txt  jjt_fof_half.txt  jjt_fof_other.txt  jjt_fof_sine_1_0.txt  test.txt  train.txt  train_256_rnd.txt  train_half.txt  validation.txt
notebooks/: # Experiment 2 plot graph detph.ipynb  # Experiment 3  Draft embedding approach.ipynb  # Plot unsupervised target distributions.ipynb  # Test graph on small dataset.ipynb  # Unsupervised dataset loader.ipynb  Analyse nodes.ipynb  Check Argument Node removal.ipynb  Compute Subgraph Motif.ipynb  Conjecture Path Length.ipynb  Construct nndata graph.ipynb  Untitled.ipynb  (+14 more)
(+27 files in other folders)
